--- a/assets/css/style-media.css
+++ b/assets/css/style-media.css
@@ -1,5 +1,23 @@
 /* pour desktop */
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 768px) {
+    .menu {
+        display: none;
+    }
+    .header-nav {
+        display: block;
+    }
+    .nav-ul{
+        list-style: none;
+        margin-right: 0.8em;
+      }
+      .nav-li{
+        padding:10px 1vh;
+        margin: 0 0.2em 0 0.2em;
+        font-size: .8em;
+        display:inline;
+    }
 
-    
+    .content {
+        max-width: 85ch;
+    }
 }
