--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,6 @@
 }
 
 body {
-  overflow: hidden;
   color: hsl(0, 0%, 95%);
   background-color: hsl(5, 15%, 5%);
   font-size: clamp(1.2rem, 5vw, 1.5rem);
@@ -68,17 +67,10 @@ a:focus {
   margin: 0 0.2em 0 0.2em;
 }
 .header-nav{
-
+  display: none;
 }
-.nav-ul{
-  list-style: none;
-  margin-right: 0.8em;
-}
-.nav-li{
-  padding:10px 1vh;
-  margin: 0 0.2em 0 0.2em;
-  font-size: .8em;
-  display:inline;
+.menu {
+  display: block;
 }
 
 .acceuil{
