--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@700&display=swap");
 
 :root {
   --scale: 0.1;
   --space: 8vmin;
-  --font-primary: 'Lato', sans-serif;
-  --font-heading: 'Playfair Display', serif;
+  --font-primary: "Lato", sans-serif;
+  --font-heading: "Playfair Display", serif;
 }
 
 @media (prefers-reduced-motion) {
@@ -15,6 +15,7 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
@@ -41,7 +42,7 @@ a:focus {
 }
 
 .page-title::after {
-  content: '↓';
+  content: "↓";
   display: block;
   font-size: 2em;
   opacity: 0;
@@ -55,32 +56,31 @@ a:focus {
   place-items: left;
   height: auto;
 }
-.header-wrapper{
+.header-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.header-title{
+.header-title {
   font-size: 1em;
   text-align: center;
-  padding:10px 1vh;
+  padding: 10px 1vh;
   margin: 0 0.2em 0 0.2em;
 }
-.header-nav{
-
+.header-nav {
 }
-.nav-ul{
+.nav-ul {
   list-style: none;
   margin-right: 0.8em;
 }
-.nav-li{
-  padding:10px 1vh;
+.nav-li {
+  padding: 10px 1vh;
   margin: 0 0.2em 0 0.2em;
-  font-size: .8em;
-  display:inline;
+  font-size: 0.8em;
+  display: inline;
 }
 
-.acceuil{
+.acceuil {
   width: auto;
   height: calc(100vh - 96px);
 }
@@ -141,7 +141,7 @@ a:focus {
 }
 
 .image-container::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -175,20 +175,19 @@ a:focus {
   }
 }
 
-.rewards {  
-  
+.rewards {
   font-size: 1rem;
 }
 table {
-  min-width:90%;
+  min-width: 90%;
 }
 table,
 th,
 td {
   color: black;
   border: 1px solid;
-  margin-left: 40px;  
-  text-align: center;  
+  margin-left: 40px;
+  text-align: center;
 }
 
 th {
@@ -202,7 +201,49 @@ tbody tr:nth-child(even) {
   background-color: rgba(199, 222, 202, 0.2);
 }
 
-.column1{
-  width:5%;
+.column1 {
+  width: 5%;
+}
+/* Carrousel */
+
+#carrousel {
+  background-color: whitesmoke;
+  width: 800px;
+  height: 400px;
+  position: relative;
+  border: 4px solid white;
+  overflow: hidden;
+}
+#containerCarrousel {
+  width: 100px;
+  height: 400px;
+}
+.photo {
+  width: 800px;
+  height: 400px;
+  margin: 0;
+  display: inline-block;
+  background-size: cover;
+}
+.button {
+  position: absolute;
+  top: 40%;
+  width: 70px;
+  cursor: pointer;
+  border-radius: 30px;
+  transition: all 0.5s ease;
+}
+#leftChevron {
+  left: 1rem;
+  opacity: 0.4;
+}
+#rightChevron {
+  right: 1rem;
+  opacity: 0.4;
 }
 
+#leftChevron:hover,
+#rightChevron:hover {
+  transform: scale(1.2);
+  opacity: 0.8;
+}
