--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -7,11 +7,14 @@
     width: 100vw;
 }
 .menu {
+    left : 32px; /* Gislain dans la place */
+    bottom:90px; /* Gislain dans la place */
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
+    width: 5vw;
+    height: 5vh;
     background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
   }
   .menu .menu-icon {
