last structure ok

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,5 +1,6 @@
+@media screen and (max-width: 720px) {
 .footer-menu {
-    z-index: 1;
+  z-index: 99999;
     background-image: url(/assets/img/grass.png);
     position: fixed;
     bottom: 0;
@@ -7,7 +8,63 @@
     width: 100vw;
 }
 
+.header-nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+}
+
+.header-nav img{
+    position: fixed;
+    left: -23px;
+    bottom: 15px;
+}
+
+.nav-a {
+  font-weight: bold;
+  color: hsl(75, 4%, 79%);
+  text-decoration: none;
+}
+
+.nav-ul{
+  /* list-style: none; */
+  margin-right: 0.8em;
+  text-align-last: start;
+  padding-top: 15%;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  left: 100%;
+  height: 100%;
+  width: 70%;
+  top: 40px;
+  transition: all .5s ease-in-out;
+}
+.nav-ul li{
+  font-size: 2rem;
+  display:block;
+  padding: 30px 0;
+  text-align: center;
+  list-style-type: none;
+  transition: all .2s ease;
+}
+.nav-ul li:hover{
+  letter-spacing: 2px;
+  opacity: .6;
+}
+.nav-li{
+  /* list-style: none; */
+  padding:10px 1vh;
+  margin: 0 0.2em 0 0.2em;
+  font-size: .8em;
+  display:inline;
+}
+
 .wrapper-menu {
+  background-color: chartreuse;
   position: fixed;
   left : -26px; /* Gislain dans la place */
   bottom: -20px; /* Gislain dans la place */
@@ -31,9 +88,11 @@
   :root {
     --bar-bg: #212529;
   }
-  
+
   .menu-icon {
-    position: relative;
+    position: fixed;
+    bottom: 64px;
+    left: 50px;
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -74,6 +133,15 @@
   .menu-icon span:last-of-type {
     bottom: 0;
   }
+
+  .menu-icon__cheeckbox:checked ~.nav-ul{
+    left: 55%;
+  }
+
+  /* ul:has(a.active) {
+    left: 100%;
+  } */
+  
   .menu-icon.active span:first-of-type,
   .menu-icon .menu-icon__cheeckbox:checked + div span:first-of-type {
     transform: rotate(45deg);
@@ -87,7 +155,13 @@
   .menu-icon.active:hover span:first-of-type, .menu-icon.active:hover span:last-of-type, .menu-icon:hover .menu-icon__cheeckbox:checked + div span:first-of-type, .menu-icon:hover .menu-icon__cheeckbox:checked + div span:last-of-type {
     width: 22px;
   }
+}
+@media (max-width: 520px) {
+  .nav-ul li {
+    font-size: 1.2rem;
+  }
 
+}
   @media (min-width: 1024px) {
     .menu-icon:hover span:first-of-type {
       width: 26px;
