--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,159 @@ border-radius: 10px;
   background-color: lightblue;
   width: 100%;
 }
+/*Disco CSS section*/
+.disco {
+  min-width: 80%; 
+  color : black; 
+  display : grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-gap: 10px;
+  font-weight: bold;
+}
 
+.song {    
+  background-color: white;
+  border-radius: 10px 10px 10px 10px;
+  display : grid;  
+  grid-gap: 1px;
+  grid-template-columns: 8fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  background-repeat:repeat;
+}
+.ghibli {
+  background-size: cover;
+  background-position: center;
+  background-repeat:repeat;
+}
+
+
+.song-title , .song-date, .song-part{
+  padding: 0px;
+  margin: 0px;
+}
+.song-title {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.song-date {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.song-part {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  display :flex ;
+  align-items: center;
+  vertical-align: center;
+}
+.song-part img {
+  height : 50%; 
+  width : 50%;
+  cursor: pointer;
+}
+
+/*Fenetre Modal---------------------------------------*/
+/*.modal-btn {
+  padding: 10px 14px;
+  font-size: 18px;
+  margin: 100px auto;
+  display: block;
+  min-width: 150px;
+  cursor: pointer;
+}*/
+.modal-btn{
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  cursor: pointer;
+}
+.modal-container {
+  /* display: none; */
+  visibility: hidden;
+  position: fixed;
+  /*top: 0;*/
+  width: 100%;
+  height: 100%;
+  transition: visibility 0.4s;
+}
+.modal-container.active {
+  /* display: block; */
+  visibility: visible;
+}
+
+.overlay {
+  box-sizing: content-box;
+  opacity: 0;
+  position: fixed;
+  left: 0;
+  right:0;
+  width: 100%;
+  height: 100%;
+  background: #333333d3;
+  transition: opacity 0.4s 0.2s ease-out;
+}
+.modal-container.active .overlay {
+  opacity: 1;
+  transition: opacity 0.4s ease-out;
+}
+
+.modal {
+  opacity: 0;
+  width: 95%;
+  max-width: 800px;
+  min-width: 320px;
+  padding: 30px;
+  margin-top: 5%;
+  background: #fff;
+  border-radius: 5px;
+  position: absolute;
+  top: 40%;
+  left: 45%;  
+  transform: translate(-50%, calc(-50% - 50px));
+  transition: opacity 0.4s ease-out,
+  transform 0.4s ease-out;
+}
+
+.modal-container.active .modal {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.4s 0.2s ease-out,
+  transform 0.4s 0.2s ease-out;
+}
+
+.close-modal {
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  background: #ff365e;
+  color: #fff;
+}
+.modal h1 {
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  color: black;
+}
+.modal p {
+  line-height: 1.4;
+  margin-bottom: 5px;
+}
+/*Fin Fenetre Modal---------------------------------------------*/
+
+/*Fin Disco CSS section*/
 .rewards {  
   
   font-size: 1rem;
