--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,6 +481,9 @@ border-radius: 10px;
   vertical-align: middle;
 }
 
+.footer{
+ min-height:4rem; 
+}
 @media screen and (min-width : 768px) {
   
 
